update layout for older devices

--- a/design/streetwalker/index.html
+++ b/design/streetwalker/index.html
@@ -5,7 +5,7 @@
   content="A minimalist walking sim which was my first foray into programming."/>
 <title> Streetwalker  • d00k.net</title></head>
 <body><div class="wrapper">
-<header><nav><div><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true"></a></div><div class="menu"><ul role="list">
+<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -19,7 +19,7 @@
 <p>Streetwalker was a project started in 2016 in an attempt to learn lua and the pico-8 virtual console. After experiencing <a href="https://www.lexaloffle.com/bbs/?pid=15930#p" target="_blank" rel="noopener">Graphics Exercise</a> by Mason Lindroth, I was inspired to create my own walking sim with the goal of filling the system&rsquo;s 1024x512 pixel map space.</p>
 <hr>
 
-<img  src="/img/design/streetwalker_3.png" loading="lazy" alt="a large map of the game&#39;s city">
+<img  src="/img/design/streetwalker_3.png" loading="lazy" alt="a large map of the game&#39;s city" width="100%" height="100%">
 
 <p>The game&rsquo;s design takes heavy inspiration from digital maps as well as brutalist architecture. Without any discernable differences from one place to the next, players are forced to wander and explore the world like they would with a new city. There are no gameplay objectives, however items are scattered randomly throughout the world. Attention was put into the physicality of the game&rsquo;s world, with things like the character darkening when in shadows, large usable bridges that can be walked on and under as well as steps being slower to walk up and down.</p>
 <div class="listbox box"><h2>Links</h2><hr><ul>
@@ -35,13 +35,13 @@
 <div class="push"></div></div>
 <footer>
 <div class="layout">
-<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright"></a>
-<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring"></a>
-<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed"></a>
-<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git"></a>
+<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
+<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30px"height="27px"></a>
+<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28px"height="28px"></a>
+<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="25px"height="28px"></a>
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>February 2022</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg">
+<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64px" width="553px">
 </footer>
 </body>
