--- a/design/virtual_gallery/index.html
+++ b/design/virtual_gallery/index.html
@@ -5,7 +5,7 @@
   content="An online art exhibition that I hosted in the summer of 2020."/>
 <title> Virtual Gallery  • d00k.net</title></head>
 <body><div class="wrapper">
-<header><nav><div><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true"></a></div><div class="menu"><ul role="list">
+<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -20,7 +20,7 @@
 <hr>
 
 <h2 id="the-exhibition">The Exhibition</h2>
-<img  src="/img/design/virtual_gallery_3.jpg" loading="lazy" alt="promotional poster from the exhibition title &#39;Young Artists of Wexford&#39;">
+<img  src="/img/design/virtual_gallery_3.jpg" loading="lazy" alt="promotional poster from the exhibition title &#39;Young Artists of Wexford&#39;" width="100%" height="100%">
 
 <p>It took several months to build a basic site from scratch using HTML and CSS, largely due to my inexperience however I learned a lot. During this time the scope changed drastically, deciding to open it up to other young artists locally who wanted to share their work. In the end, 15 artists signed up to exhibit. Despite my inability to run proper social media for it, the exhibition was quite successful. While a follow-up photography competition was planned, circumstances preventing me from working on the site. I hope to pick the project back up from scratch in the future, however.</p>
 <hr>
@@ -32,13 +32,13 @@
 <div class="push"></div></div>
 <footer>
 <div class="layout">
-<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright"></a>
-<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring"></a>
-<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed"></a>
-<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git"></a>
+<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
+<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30px"height="27px"></a>
+<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28px"height="28px"></a>
+<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="25px"height="28px"></a>
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>February 2022</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg">
+<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64px" width="553px">
 </footer>
 </body>
