--- a/wiki/ecovillage/index.html
+++ b/wiki/ecovillage/index.html
@@ -5,7 +5,7 @@
   content="Record of my visit around Cloughjordan Ecovillage."/>
 <title> Ecovillages  • d00k.net</title></head>
 <body><div class="wrapper">
-<header><nav><div><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true"></a></div><div class="menu"><ul role="list">
+<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -21,12 +21,12 @@ a large <a href="https://cloughjordancommunityfarm.ie/" target="_blank" rel="noo
 <hr>
 
 <h2 id="village-characteristics">Village Characteristics</h2>
-<img  src="/img/wiki/ecovillage04.jpg" loading="lazy" alt="Apartments behind a large town square">
+<img  src="/img/wiki/ecovillage04.jpg" loading="lazy" alt="Apartments behind a large town square" width="100%" height="100%">
 
 <p>Cloughjordan Ecovillage has a large variety in housing, near the village entrance are a number of spacey apartment blocks surrounding the town square. As you go further in, there are mostly individual plots with houses of much variety in construction, most following an eco philosophy. There are many walking trails to houses off the main paths and roads. Trees encase these trails beautifully (see the images below for an example). Overall, nature is very much in control around these houses. There are no managed lawns or unfamiliar plants to be seen.</p>
 
 <h2 id="energy-and-waste-management">Energy and Waste Management</h2>
-<img  src="/img/wiki/ecovillage01.jpg" loading="lazy" alt="A large solar panel array">
+<img  src="/img/wiki/ecovillage01.jpg" loading="lazy" alt="A large solar panel array" width="100%" height="100%">
 
 <p>The village has an installation of a 500m² solar panel array, and every building appears to have their own installations of some kind of panel. In terms of waste management, the village is dependent on the local council water treatment facilities. This dependency however has stopped the village from expanding, the facilities being at max capacity means they must either find their own solutions or work with the government to improve the system already in place, which they appear to be doing.</p>
 
@@ -42,15 +42,15 @@ a large <a href="https://cloughjordancommunityfarm.ie/" target="_blank" rel="noo
 </ul></div>
 
 <h2 id="gallery">Gallery</h2>
-<figure><img src="/img/wiki/ecovillage06.jpg" loading="lazy" alt="A community building">
+<figure><img src="/img/wiki/ecovillage06.jpg" loading="lazy" alt="A community building" width="100%" height="100%">
 <figcaption>a community building</figcaption></figure>
 
 
-<figure><img src="/img/wiki/ecovillage03.jpg" loading="lazy" alt="Tree-lined path">
+<figure><img src="/img/wiki/ecovillage03.jpg" loading="lazy" alt="Tree-lined path" width="100%" height="100%">
 <figcaption>Tree-lined path</figcaption></figure>
 
 
-<figure><img src="/img/wiki/ecovillage02.jpg" loading="lazy" alt="A wattle &amp; daub round house">
+<figure><img src="/img/wiki/ecovillage02.jpg" loading="lazy" alt="A wattle &amp; daub round house" width="100%" height="100%">
 <figcaption>a wattle and daub round house</figcaption></figure>
 
 
@@ -61,13 +61,13 @@ a large <a href="https://cloughjordancommunityfarm.ie/" target="_blank" rel="noo
 <div class="push"></div></div>
 <footer>
 <div class="layout">
-<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright"></a>
-<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring"></a>
-<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed"></a>
-<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git"></a>
+<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
+<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30px"height="27px"></a>
+<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28px"height="28px"></a>
+<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="25px"height="28px"></a>
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>March 2022</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg">
+<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64px" width="553px">
 </footer>
 </body>
