--- a/about/colophon/identity/index.html
+++ b/about/colophon/identity/index.html
@@ -4,7 +4,7 @@
 
 <title> Identity  • d00k.net</title></head>
 <body><div class="wrapper">
-<header><nav><div><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true"></a></div><div class="menu"><ul role="list">
+<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -19,22 +19,22 @@
 <hr>
 
 <h2 id="personal-flag">Personal Flag</h2>
-<img  src="/img/about/Flag.png" loading="lazy" alt="a square flag with grey on top, pink on the bottom and white circle in the middle">
+<img  src="/img/about/Flag.png" loading="lazy" alt="a square flag with grey on top, pink on the bottom and white circle in the middle" width="100%" height="100%">
 
 <p>The flag, which features as the favicon for d00k.net, serves as a cartographic representation of my aesthetic and philosophies. The design and colourscheme were chosen for their visual synergy, rather than having any distinct meaning.</p>
 
 <h2 id="pieces">Pieces</h2>
-<img  src="/img/about/pieces.svg" loading="lazy" alt="various abstract shapes on a canvas">
+<img  src="/img/about/pieces.svg" loading="lazy" alt="various abstract shapes on a canvas" width="100%" height="100%">
 
 <p>The central core to the visual identity of d00k.net, Pieces serve as an abstract yet meaningless method of communication to the viewer. In place of a logo or mascot, Pieces fill in the gaps of visual iconography on the site.</p>
 
 <h2 id="colourscheme">Colourscheme</h2>
-<img  src="/img/about/colourscheme.png" loading="lazy" alt="A set of colours from black to white">
+<img  src="/img/about/colourscheme.png" loading="lazy" alt="A set of colours from black to white" width="100%" height="100%">
 
 <p>This site follows a strict colourscheme for content. With black and white being for text and important elements, set tones of grey taken in steps of 5 on the luminance Value scale in HSV. There are some exceptions to be found, for example the hex value #ffaaaa seen in the flag is used in the menu icon as well as the 404 page. A lighter dark tone is used for the backdrop of <!-- raw HTML omitted --> tag in order to lessen eye strain.</p>
 
 <h2 id="portrait">Portrait</h2>
-<img  src="/img/about/profilepic.jpg" loading="lazy" alt="an abstract image of a person looking upwards">
+<img  src="/img/about/profilepic.jpg" loading="lazy" alt="an abstract image of a person looking upwards" width="100%" height="100%">
 
 <p>The self portrait used for profile pictures on websites. Came from an art project where I combined the same 2 images 100 times with different blending layers to create different results. Also seen on the about page.</p>
 
@@ -45,13 +45,13 @@
 <div class="push"></div></div>
 <footer>
 <div class="layout">
-<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright"></a>
-<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring"></a>
-<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed"></a>
-<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git"></a>
+<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
+<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30px"height="27px"></a>
+<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28px"height="28px"></a>
+<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="25px"height="28px"></a>
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>September 2023</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg">
+<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64px" width="553px">
 </footer>
 </body>
