--- a/design/adwaitapod/index.html
+++ b/design/adwaitapod/index.html
@@ -5,7 +5,7 @@
   content="A modern, feature-rich theme for rockbox on iPod Video models."/>
 <title> adwaitapod  • d00k.net</title></head>
 <body><div class="wrapper">
-<header><nav><div><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true"></a></div><div class="menu"><ul role="list">
+<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -18,7 +18,7 @@
 <div class="title"><h1 id="top">adwaitapod</h1><hr></div>
 <p>Originally created in 2022, adwaitapod is a modern and feature-rich Ui theme for the iPod classic (5th generation onwards). Built using Rockbox, the theme is designed using the Gnome foundation&rsquo;s <a href="https://en.wikipedia.org/wiki/Adwaita_%28design_language%29" target="_blank" rel="noopener">Adwaita</a> design language. Adwaitapod is built with an aim to create a pleasing, predictable user experience, alongside customisation capabilities that allows users to tweak the theme to their taste.</p>
 
-<img  src="/img/design/adwaitapod.gif" loading="lazy" alt="A gif showing the various screens of adwaitapod">
+<img  src="/img/design/adwaitapod.gif" loading="lazy" alt="A gif showing the various screens of adwaitapod" width="100%" height="100%">
 
 <p>Adwaitapod is currently the most advanced use of Rockbox&rsquo;s theming system, with many unique features like a redesigned Recording screen, custom user-friendly selection menus, and the first fully-custom quick settings screen.</p>
 <p>The theme also features the best optimisations of images for Rockbox themes, both with some of the best image compression possible, as well as optimisations in how images are rendered.</p>
@@ -40,13 +40,13 @@
 <div class="push"></div></div>
 <footer>
 <div class="layout">
-<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright"></a>
-<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring"></a>
-<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed"></a>
-<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git"></a>
+<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
+<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30px"height="27px"></a>
+<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28px"height="28px"></a>
+<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="25px"height="28px"></a>
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>November 2022</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg">
+<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64px" width="553px">
 </footer>
 </body>
