--- a/design/rebble_weather/index.html
+++ b/design/rebble_weather/index.html
@@ -5,7 +5,7 @@
   content="Reimagining the Pebble weather icons for use in future projects."/>
 <title> Rebble Weather Icons  • d00k.net</title></head>
 <body><div class="wrapper">
-<header><nav><div><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true"></a></div><div class="menu"><ul role="list">
+<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -18,26 +18,26 @@
 <div class="title"><h1 id="top">Rebble Weather Icons</h1><hr></div>
 <p>Inspired by the Pebble revival project, Rebble, and their unique aesthetic inspired by the original series of icons developed by Heydays design for pebble, I set out to make my own weather icons to use in projects on the platform in the future. While I took inspiration to make them familiar to users, I also sought to give them their own flair and individual personality.</p>
 
-<figure><img src="/img/design/rebbleweather01.jpg" loading="lazy" alt="Many various icons for apps, weather and watch functions">
+<figure><img src="/img/design/rebbleweather01.jpg" loading="lazy" alt="Many various icons for apps, weather and watch functions" width="100%" height="100%">
 <figcaption>The original Pebble icons, designed by Heydays.</figcaption></figure>
 
 <hr>
 
 <h2 id="rain-snow-and-clouds">Rain, Snow and Clouds</h2>
-<img  src="/img/design/rebbleweather02.svg" loading="lazy" alt="Different kinds of weather icons on a purple background. Example, snow, rain etc.">
+<img  src="/img/design/rebbleweather02.svg" loading="lazy" alt="Different kinds of weather icons on a purple background. Example, snow, rain etc." width="100%" height="100%">
 
 <p>The weather icons with clouds proved challenging at times, being limited to 3 angles (flat, 1:1 and 1:2) meant the shape was very limited in terms of originality and looking good. Eventually I took the cloud icon Lavender had made for the project, and jazzed it up making it more fluffy and rounder overall. There were many different prototypes designed before I landed on the final shape.</p>
 
-<figure><img src="/img/design/rebbleweather03.jpg" loading="lazy" alt="8 variations of the cloud icon">
+<figure><img src="/img/design/rebbleweather03.jpg" loading="lazy" alt="8 variations of the cloud icon" width="100%" height="100%">
 <figcaption>Prototyping the cloud shape.</figcaption></figure>
 
 
 <h2 id="sunny-day">Sunny Day</h2>
-<img  src="/img/design/RebbleIconsImg.png" loading="lazy" alt="A cartoonish sun with rays coming off it on a yellow background">
+<img  src="/img/design/RebbleIconsImg.png" loading="lazy" alt="A cartoonish sun with rays coming off it on a yellow background" width="100%" height="100%">
 
 <p>Witht the sun icon, I tried to build upon Heyday&rsquo;s design by making it more rounded and less sharp overall. The rays on the original are far nicer in my opinion, however I feel the rays on my design also fit well with the whole concept. The shape of the central ball took several prototypes trying different ideas to pick the right one. On real hardware, the ball looks more square with rounded corners.</p>
 
-<figure><img src="/img/design/rebbleweather05.jpg" loading="lazy" alt="3 circle like shapes with variations">
+<figure><img src="/img/design/rebbleweather05.jpg" loading="lazy" alt="3 circle like shapes with variations" width="100%" height="100%">
 <figcaption>The ball prototypes.</figcaption></figure>
 
 <hr>
@@ -53,13 +53,13 @@
 <div class="push"></div></div>
 <footer>
 <div class="layout">
-<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright"></a>
-<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring"></a>
-<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed"></a>
-<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git"></a>
+<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
+<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30px"height="27px"></a>
+<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28px"height="28px"></a>
+<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="25px"height="28px"></a>
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>August 2022</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg">
+<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64px" width="553px">
 </footer>
 </body>
