--- a/design/tindra_grove/index.html
+++ b/design/tindra_grove/index.html
@@ -5,7 +5,7 @@
   content="Logo Commission for a personal Website"/>
 <title> Tindra&#39;s Grove Logo  • d00k.net</title></head>
 <body><div class="wrapper">
-<header><nav><div><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true"></a></div><div class="menu"><ul role="list">
+<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -20,7 +20,7 @@
 <hr>
 
 <h2 id="logo-visual-guide">Logo Visual Guide</h2>
-<img  src="/img/design/Tindra_VIG.png" loading="lazy" alt="Visual Identity Guide for the client">
+<img  src="/img/design/Tindra_VIG.png" loading="lazy" alt="Visual Identity Guide for the client" width="100%" height="100%">
 
 
 <nav><a class="prev navbut" href="/design/">← Back to  Design Portfolio </a>
@@ -30,13 +30,13 @@
 <div class="push"></div></div>
 <footer>
 <div class="layout">
-<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright"></a>
-<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring"></a>
-<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed"></a>
-<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git"></a>
+<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
+<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30px"height="27px"></a>
+<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28px"height="28px"></a>
+<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="25px"height="28px"></a>
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>September 2023</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg">
+<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64px" width="553px">
 </footer>
 </body>
