--- a/photos/experiments/lowres/index.html
+++ b/photos/experiments/lowres/index.html
@@ -5,7 +5,7 @@
   content="Short series of photos with extremely small resolutions."/>
 <title> Low Res Photography  • d00k.net</title></head>
 <body><div class="wrapper">
-<header><nav><div><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true"></a></div><div class="menu"><ul role="list">
+<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -19,16 +19,16 @@
 <p>Low resolution photos taken on a Nokia C3 phone, using the 1MP Resolution setting. Mixture of Trichrome and regular photos.</p>
 <hr>
 
-<img  src="/img/photos/lowres/lowres02.jpg" loading="lazy" alt="pale, pink cherry blossoms.">
+<img  src="/img/photos/lowres/lowres02.jpg" loading="lazy" alt="pale, pink cherry blossoms." width="100%" height="100%">
 
 
-<img  src="/img/photos/lowres/lowres03.jpg" loading="lazy" alt="Like bursting on pale daffodils.">
+<img  src="/img/photos/lowres/lowres03.jpg" loading="lazy" alt="Like bursting on pale daffodils." width="100%" height="100%">
 
 
-<img  src="/img/photos/lowres/lowres04.jpg" loading="lazy" alt="A waterdrop reflecting it&#39;s backdrop upside down.">
+<img  src="/img/photos/lowres/lowres04.jpg" loading="lazy" alt="A waterdrop reflecting it&#39;s backdrop upside down." width="100%" height="100%">
 
 
-<img  src="/img/photos/lowres/lowres05.jpg" loading="lazy" alt="A mossy branch.">
+<img  src="/img/photos/lowres/lowres05.jpg" loading="lazy" alt="A mossy branch." width="100%" height="100%">
 
 
 <nav><a class="prev navbut" href="/photos/#experiments">← Back to  Photo Gallery </a>
@@ -38,13 +38,13 @@
 <div class="push"></div></div>
 <footer>
 <div class="layout">
-<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright"></a>
-<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring"></a>
-<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed"></a>
-<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git"></a>
+<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
+<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30px"height="27px"></a>
+<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28px"height="28px"></a>
+<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="25px"height="28px"></a>
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>February 2022</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg">
+<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64px" width="553px">
 </footer>
 </body>
