--- a/photos/places/westport/index.html
+++ b/photos/places/westport/index.html
@@ -5,7 +5,7 @@
   content="Photos taken in and around Westport."/>
 <title> Westport  • d00k.net</title></head>
 <body><div class="wrapper">
-<header><nav><div><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true"></a></div><div class="menu"><ul role="list">
+<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -20,28 +20,28 @@
 <hr>
 
 <h2 id="photos">Photos</h2>
-<img  src="/img/photos/places/westport01.jpg" loading="lazy" alt="A boat in the bay&#39;s dock">
+<img  src="/img/photos/places/westport01.jpg" loading="lazy" alt="A boat in the bay&#39;s dock" width="100%" height="100%">
 
 
-<img  src="/img/photos/places/westport02.jpg" loading="lazy" alt="lobster nets">
+<img  src="/img/photos/places/westport02.jpg" loading="lazy" alt="lobster nets" width="100%" height="100%">
 
 
-<img  src="/img/photos/places/westport03.jpg" loading="lazy" alt="A marshy kind of place beside a beach">
+<img  src="/img/photos/places/westport03.jpg" loading="lazy" alt="A marshy kind of place beside a beach" width="100%" height="100%">
 
 
-<img  src="/img/photos/places/westport04.jpg" loading="lazy" alt="a quaint, long wooden bridge over the marshy area">
+<img  src="/img/photos/places/westport04.jpg" loading="lazy" alt="a quaint, long wooden bridge over the marshy area" width="100%" height="100%">
 
 
-<img  src="/img/photos/places/westport05.jpg" loading="lazy" alt="Westport House Bridge">
+<img  src="/img/photos/places/westport05.jpg" loading="lazy" alt="Westport House Bridge" width="100%" height="100%">
 
 
-<img  src="/img/photos/places/westport07.jpg" loading="lazy" alt="Entrance into a wood trail in westport house">
+<img  src="/img/photos/places/westport07.jpg" loading="lazy" alt="Entrance into a wood trail in westport house" width="100%" height="100%">
 
 
-<img  src="/img/photos/places/westport08.jpg" loading="lazy" alt="A striking, red bridge over a stream">
+<img  src="/img/photos/places/westport08.jpg" loading="lazy" alt="A striking, red bridge over a stream" width="100%" height="100%">
 
 
-<img  src="/img/photos/places/westport09.jpg" loading="lazy" alt="A striking, red bridge over a stream">
+<img  src="/img/photos/places/westport09.jpg" loading="lazy" alt="A striking, red bridge over a stream" width="100%" height="100%">
 
 
 <nav><a class="prev navbut" href="/photos/#places">← Back to  Photo Gallery </a>
@@ -51,13 +51,13 @@
 <div class="push"></div></div>
 <footer>
 <div class="layout">
-<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright"></a>
-<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring"></a>
-<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed"></a>
-<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git"></a>
+<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
+<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30px"height="27px"></a>
+<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28px"height="28px"></a>
+<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="25px"height="28px"></a>
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>October 2022</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg">
+<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64px" width="553px">
 </footer>
 </body>
