--- a/photos/trichrome/trichrome_notes/index.html
+++ b/photos/trichrome/trichrome_notes/index.html
@@ -5,7 +5,7 @@
   content="Detailed write-up on the Trichrome technique used to make colour images."/>
 <title> Trichrome Technique  • d00k.net</title></head>
 <body><div class="wrapper">
-<header><nav><div><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true"></a></div><div class="menu"><ul role="list">
+<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -21,12 +21,12 @@
 
 <h2 id="how-does-it-work">How does it work?</h2><p>Shooting trichrome is quite simple, firstly you need lenses. Red, blue and green are the best to start, but I have experimented with purple and yellow as well. A picture is taken for each colour, and then combined afterwards to form a complete image. For digital trichrome, I use any image editing software that has layer blending. Mess around and see what works! Below you can see a demonstration of the construction of a trichrome image.</p>
 
-<figure><img src="/img/photos/trichrome/trichrome2.gif" loading="lazy" alt="Four images of a poppy flower. Red, blue, green and the three together">
+<figure><img src="/img/photos/trichrome/trichrome2.gif" loading="lazy" alt="Four images of a poppy flower. Red, blue, green and the three together" width="100%" height="100%">
 <figcaption>The trichrome process.</figcaption></figure>
 
 
 <h2 id="making-your-own-lenses">Making your own lenses</h2>
-<img  src="/img/photos/trichrome/trichrome1.jpg" loading="lazy" alt="A Set of Red, Blue and Green filters">
+<img  src="/img/photos/trichrome/trichrome1.jpg" loading="lazy" alt="A Set of Red, Blue and Green filters" width="100%" height="100%">
 
 <p>Many photographers will point you towards often pricey acrylic lenses. However simple plastic, coloured vinyl sheets are a fantastic substitute for dirt cheap lenses. I made my frames out of cardboard, two layers at 90° to each other with the vinyl in the middle. The vinyl is stretched out like a canvas and super glued to the frames. They aren&rsquo;t perfect though, the green and blue plastics I made leaked other colours pretty significantly. This can be fixed by double layering the vinyl, however I took it in it&rsquo;s stride and the imperfections became the backbone of my personal technique. The one other downside is that rain and water will ruin them temporarily, this makes it impossible to shoot good photos in the rain sadly.</p>
 
@@ -37,13 +37,13 @@
 <div class="push"></div></div>
 <footer>
 <div class="layout">
-<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright"></a>
-<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring"></a>
-<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed"></a>
-<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git"></a>
+<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
+<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30px"height="27px"></a>
+<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28px"height="28px"></a>
+<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="25px"height="28px"></a>
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>February 2022</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg">
+<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64px" width="553px">
 </footer>
 </body>
