--- a/wiki/bees/index.html
+++ b/wiki/bees/index.html
@@ -5,7 +5,7 @@
   content="An Encyclopedia of various Bees I&#39;ve spotted, and photographed."/>
 <title> Bee Encyclopedia  • d00k.net</title></head>
 <body><div class="wrapper">
-<header><nav><div><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true"></a></div><div class="menu"><ul role="list">
+<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -36,7 +36,7 @@
 <hr>
 
 <h2 id="leaf-cutter-bee">Leaf Cutter Bee</h2>
-<figure><img src="/img/wiki/bees04.jpg" loading="lazy" alt="A small, black, white and orange bee carrying a leaf into it&#39;s nest in a hole">
+<figure><img src="/img/wiki/bees04.jpg" loading="lazy" alt="A small, black, white and orange bee carrying a leaf into it&#39;s nest in a hole" width="100%" height="100%">
 <figcaption>Megachile (Delomegachile) willughbiella</figcaption></figure>
 
 <p>The Leaf cutter bee is a near-threatened solitary bee species in Ireland. Identifiable by their unique characteristic of cutting and carrying leaves to use in their nests, which are usually in the ground or small cavities they find. There has only been 136 records of it since the 1800 in Ireland.</p>
@@ -47,7 +47,7 @@
 <hr>
 
 <h2 id="ashy-miner-bee">Ashy Miner Bee</h2>
-<figure><img src="/img/wiki/bees03.jpg" loading="lazy" alt="A Black and White striped bee on a dandelion">
+<figure><img src="/img/wiki/bees03.jpg" loading="lazy" alt="A Black and White striped bee on a dandelion" width="100%" height="100%">
 <figcaption>Andrena (Melandrena) cineraria</figcaption></figure>
 
 <p>This solitary bee measures at just around 15mm in length and is one of the earliest bees in the garden each <a href="/gallery/trichrome/spring/">Spring</a>. They are relatively common, and are easily identified by the two grey, or ashy, bands of colour on their Thorax. They nest in the ground by burrowing holes, and are quite active.</p>
@@ -58,7 +58,7 @@
 <hr>
 
 <h2 id="large-red-tailed-bumble-bee">Large Red Tailed Bumble Bee</h2>
-<figure><img src="/img/wiki/bees01.jpg" loading="lazy" alt="A large, Black bee sitting on a purple flower">
+<figure><img src="/img/wiki/bees01.jpg" loading="lazy" alt="A large, Black bee sitting on a purple flower" width="100%" height="100%">
 <figcaption>Bombus (Melanobombus) lapidarius</figcaption></figure>
 
 <p>One of the largest bees in Ireland, the Large Red Tailed Bumble Bee are considered a threatened species. Every year we usually have a few to spot in the garden during the summer. Easily one of the best bees to capture, as they tend to stay still for long periods of time compared to the smaller, hyper-active bumblers.</p>
@@ -69,7 +69,7 @@
 <hr>
 
 <h2 id="early-bumble-bee">Early Bumble Bee</h2>
-<figure><img src="/img/wiki/bees02.jpg" loading="lazy" alt="A medium sized black bee with two bright yellow stripes on a white flower">
+<figure><img src="/img/wiki/bees02.jpg" loading="lazy" alt="A medium sized black bee with two bright yellow stripes on a white flower" width="100%" height="100%">
 <figcaption>Bombus (Melanobombus) lapidarius</figcaption></figure>
 
 <p>The Early Bumble Bee is named for it&rsquo;s early start in the year, appearing as soon as February in some places. They are fairly common, and nest in the ground or aerial cavities like bird boxes. When in flower, the crab-apple tree is rife with these eager bees. They are identified by the two yellow rings on the body, and the orange hairs on their bottoms.</p>
@@ -80,7 +80,7 @@
 <hr>
 
 <h2 id="white-tailed-bumble-bee">White-tailed Bumble Bee</h2>
-<figure><img src="/img/wiki/bees06.jpg" loading="lazy" alt="A large, Black bee with yellow stripes and white bottom hanging onto flowers">
+<figure><img src="/img/wiki/bees06.jpg" loading="lazy" alt="A large, Black bee with yellow stripes and white bottom hanging onto flowers" width="100%" height="100%">
 <figcaption>Bombus (Bombus) lucorum</figcaption></figure>
 
 <p>These bright bees are commonly found all over Ireland almost all year round. The workers of the B.locorum and the B.terrestris species are impossible to tell apart by the eye, however if you see this bee it is most likely a Bombus locorum. The Males of this species have a lot more yellow on their bodies than Females, and are striking in appearance.</p>
@@ -91,7 +91,7 @@
 <hr>
 
 <h2 id="common-carder-bee">Common Carder Bee</h2>
-<figure><img src="/img/wiki/bees05.jpg" loading="lazy" alt="A soft, small orange bee in a white apple tree flower">
+<figure><img src="/img/wiki/bees05.jpg" loading="lazy" alt="A soft, small orange bee in a white apple tree flower" width="100%" height="100%">
 <figcaption>Bombus (Thoracombus) pascuorum</figcaption></figure>
 
 <p>Likely the most common wild bee species in Ireland, these small fellas can be seen year-round hanging out in whatever is blooming. Their characteristic ginger thorax makes them very easy to spot and identify. These ginger hairs can become faded or bleached by the sun which sometimes make them look similar to the Large carder bee. These small bees nest in surface litter.</p>
@@ -102,7 +102,7 @@
 <hr>
 
 <h2 id="honey-bee">Honey Bee</h2>
-<figure><img src="/img/wiki/bees07.jpg" loading="lazy" alt="A soft, small orange bee in a white apple tree flower">
+<figure><img src="/img/wiki/bees07.jpg" loading="lazy" alt="A soft, small orange bee in a white apple tree flower" width="100%" height="100%">
 <figcaption>Apis mellifera</figcaption></figure>
 
 <p>Ireland’s only domesticated, honeybee species. These can be seen year round and are extremely common due to being domesticated. According to the distribution map, these are kept far along the east coast of Ireland more than anywhere else in the country.</p>
@@ -113,7 +113,7 @@
 <hr>
 
 <h2 id="buff-tailed-bumble-bee">Buff-Tailed Bumble Bee</h2>
-<figure><img src="/img/wiki/bees08.jpg" loading="lazy" alt="A soft, small orange bee in a white apple tree flower">
+<figure><img src="/img/wiki/bees08.jpg" loading="lazy" alt="A soft, small orange bee in a white apple tree flower" width="100%" height="100%">
 <figcaption>Bombus Terrestris</figcaption></figure>
 
 <p>Common, year-round bees. The Buff-Tailed bees are best identified by their buff, or off white, bottoms. Generally quite large, the workers of these species are perfectly identical to workers of the White-Tailed Bumble Bees. The bee captured here appears to be a male, which are easier to identify as a Buff-Tail.</p>
@@ -124,7 +124,7 @@
 <hr>
 
 <h2 id="early-mining-bee">Early Mining Bee</h2>
-<figure><img src="/img/wiki/bees09.jpg" loading="lazy" alt="A very small bee on a white flower with an orange-ish back">
+<figure><img src="/img/wiki/bees09.jpg" loading="lazy" alt="A very small bee on a white flower with an orange-ish back" width="100%" height="100%">
 <figcaption>Andrena (Trachandrena) haemorrhoa - Male</figcaption></figure>
 
 <p>Another common mining bee, the Early Mining Bee can be seen from March all the way through to August, quite long for it&rsquo;s kind. These bees are really small, between just 11 and 13mm. Females are strikingly orange, with a distinctive red tip of hairs on their abdomen. Males on the other hand aren&rsquo;t as standout, and generally smaller too. Spotted in the Apple tree blooms in late April.</p>
@@ -145,13 +145,13 @@
 <div class="push"></div></div>
 <footer>
 <div class="layout">
-<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright"></a>
-<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring"></a>
-<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed"></a>
-<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git"></a>
+<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
+<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30px"height="27px"></a>
+<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28px"height="28px"></a>
+<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="25px"height="28px"></a>
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>July 2022</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg">
+<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64px" width="553px">
 </footer>
 </body>
