--- a/wiki/linux/imagemagick/index.html
+++ b/wiki/linux/imagemagick/index.html
@@ -5,7 +5,7 @@
   content="Explaining Commands and various tricks for the image editing tool."/>
 <title> ImageMagick Guide  • d00k.net</title></head>
 <body><div class="wrapper">
-<header><nav><div><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true"></a></div><div class="menu"><ul role="list">
+<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -52,12 +52,12 @@ option parameters: widthxheight&#43;x_offset&#43;y_offset</code></pre>
 or
  mogrify -geometry 1080x input.jpg</code></pre>
 <h4 id="scale">Scale:</h4><pre><code>mogrify -scale 200% input.jpg</code></pre>
-<figure><img src="/img/wiki/linux/imagemagick01.jpg" loading="lazy" alt="2 images of bees combined horizontally">
+<figure><img src="/img/wiki/linux/imagemagick01.jpg" loading="lazy" alt="2 images of bees combined horizontally" width="100%" height="100%">
 <figcaption>Resize vs Scale</figcaption></figure>
 
 
 <h3 id="combining-images">Combining Images</h3>
-<img  src="/img/wiki/linux/imagemagick02.jpg" loading="lazy" alt="2 images of bees combined horizontally">
+<img  src="/img/wiki/linux/imagemagick02.jpg" loading="lazy" alt="2 images of bees combined horizontally" width="100%" height="100%">
 
 <p>This is a pretty handy command I just found that lets you combine images side by side! Wether they combine vertically or horizontally depends on the prefix the command, <strong>+</strong> for horizontal and <strong>-</strong> for vertical. This command even lets you use images with different file formats to each other!</p>
 
@@ -92,13 +92,13 @@ or
 <div class="push"></div></div>
 <footer>
 <div class="layout">
-<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright"></a>
-<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring"></a>
-<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed"></a>
-<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git"></a>
+<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
+<a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30px"height="27px"></a>
+<a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28px"height="28px"></a>
+<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="25px"height="28px"></a>
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>January 2023</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg">
+<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64px" width="553px">
 </footer>
 </body>
