further updates to improve layout compatibility

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <meta property="og:image" content="/img/" />
 
 <title> Home  • d00k.net</title></head>
-<body><div class="wrapper">
-<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
+<body><header><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -13,7 +12,7 @@
 <li><a href="/about/">About</a></li>
 </ul></div></nav></header>
 <main class="layout">
-<img src="/img/assets/homeimage.png" alt="shadows on a dimly lit wall" width="100%" height="100%" style="border-radius:20px;margin-top:24px"> 
+<img src="/img/assets/homeimage.png" alt="shadows on a dimly lit wall" width="720px" height="540px" style="border-radius:20px;margin-top:24px"> 
 <div class="text borderless box">
 
 <div><h2 id="dooknet-ˈdʊk">dook.net (/ˈdʊk/)</h2><p>Personal Website, Portfolio, Wiki, Photo Gallery, Memex and Blog</div>
@@ -23,7 +22,6 @@
 <li><a class="linklist" href="/blog/redesigning_again/">∙ Re-designing my site, one more time</a></li><li><a class="linklist" href="/blog/one-year-of-dook-net/">∙ Celebrating a Year of d00k.net</a></li><li><a class="linklist" href="/blog/inside_themify/">∙ A Look Inside Themify</a></li> 
 </ul></div>
 </main>
-<div class="push"></div></div>
 <footer>
 <div class="layout">
 <a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
