--- a/404.html
+++ b/404.html
@@ -3,8 +3,8 @@
 
 
 <title> 404 Page not found  • d00k.net</title></head>
-<body><div class="wrapper">
-<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
+<body><div style="min-height:100%;margin-bottom:-94px">
+<header><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -16,7 +16,7 @@
 <img src="/img/assets/404.svg" alt="shadows on a dimly lit wall" width="720" > 
 <p style="margin:auto;width:fit-content">Sorry, this page doesn't exist.</p>
 </main>
-<div class="push"></div></div>
+<div style="height:100px"></div></div>
 <footer>
 <div class="layout">
 <a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
@@ -28,4 +28,4 @@
 </div>
 <img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64px" width="553px">
 </footer>
-</body>
+</body> 
