--- a/design/index.html
+++ b/design/index.html
@@ -4,8 +4,7 @@
 <meta property="og:description" 
   content="Design Portfolio of my works up to the current year"/>
 <title> Design Portfolio  • d00k.net</title></head>
-<body><div class="wrapper">
-<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
+<body><header><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -111,7 +110,7 @@
 </picture>
 
 <div class="clickdiv"><h3 id="famicase-exhibition-2021">Famicase Exhibition 2021</h3><p>My entry to the annual Famicase exhibition hosted by Super Meteor.</div></a>
-<a href="" class="clickbox box clickimg" >
+<a href="virtual_gallery" class="clickbox box clickimg" >
 
 <picture>
 <source srcset="/img/design/virtual_gallery_1.png" media="(max-width:716px)">
@@ -138,7 +137,6 @@
 
 </nav>
 </main>
-<div class="push"></div></div>
 <footer>
 <div class="layout">
 <a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
