--- a/wiki/ecovillage/index.html
+++ b/wiki/ecovillage/index.html
@@ -4,8 +4,7 @@
 <meta property="og:description" 
   content="Record of my visit around Cloughjordan Ecovillage."/>
 <title> Ecovillages  • d00k.net</title></head>
-<body><div class="wrapper">
-<header><nav><div style="width:45vw;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
+<body><header><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -58,7 +57,6 @@ a large <a href="https://cloughjordancommunityfarm.ie/" target="_blank" rel="noo
 
 </nav>
 </main>
-<div class="push"></div></div>
 <footer>
 <div class="layout">
 <a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28px"height="28px"></a>
